[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jvisa"
version = "0.1.0"
description = "Team J-VISA proposes SepsisAlert, an AI-powered, SMART on FHIR-enabled sepsis early warning application."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["jvisa*"]
